objects/DM_Investor_Loan_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>DM_ACH_Filename__c</fullName>
        <label>DM ACH Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Accrued_Interest_Snapshot__c</fullName>
        <label>DM Accrued Interest Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Approval_Date_Snapshot__c</fullName>
        <label>DM Approval Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Balance_After__c</fullName>
        <label>DM Balance After</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Certificate_Rate_Snapshot__c</fullName>
        <label>DM Certificate Rate Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Date__c</fullName>
        <label>DM Charged Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Fees__c</fullName>
        <label>DM Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Interest__c</fullName>
        <label>DM Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Principal__c</fullName>
        <label>DM Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_3__c</fullName>
        <label>DM Custom Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_End_Date_Snapshot__c</fullName>
        <label>DM End Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <label>DM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Fees__c</fullName>
        <label>DM Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_GL_Post_Date__c</fullName>
        <label>DM GL Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_IOA_Amount_Paid_Snapshot__c</fullName>
        <label>DM IOA Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_IOA__c</fullName>
        <label>DM IOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Accrual_From_Date__c</fullName>
        <label>DM Interest Accrual From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Accrual_Prin_Amount__c</fullName>
        <label>DM Interest Accrual Prin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Accrual_To_Date__c</fullName>
        <label>DM Interest Accrual To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Accrued_Amount__c</fullName>
        <label>DM Interest Accrued Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Amount_Paid_Snapshot__c</fullName>
        <label>DM Interest Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Balance_Snapshot__c</fullName>
        <label>DM Interest Balance Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Exempted_From_Serv_Fee_Snaps__c</fullName>
        <label>DM Interest Exempted From Serv Fee Snaps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Paid_Snapshot__c</fullName>
        <label>DM Interest Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_On_Loan_Snapshot__c</fullName>
        <label>DM Interest Rate On Loan Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rounding_Error_Snapshot__c</fullName>
        <label>DM Interest Rounding Error Snapshot</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Service_Charge__c</fullName>
        <label>DM Interest Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest__c</fullName>
        <label>DM Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Investment_Amount_Snapshot__c</fullName>
        <label>DM Investment Amount Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Investment_Order__c</fullName>
        <label>DM Investment Order</label>
        <referenceTo>DM_Investment_Order__c</referenceTo>
        <relationshipLabel>DM Investor Loan Transaction</relationshipLabel>
        <relationshipName>DM_Investor_Loan_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DM_Last_Interest_Accrual_Date_Snapshot__c</fullName>
        <label>DM Last Interest Accrual Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Late_Fee_Service_Charge__c</fullName>
        <label>DM Late Fee Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Late_Fees_Amount_Paid_Snapshot__c</fullName>
        <label>DM Late Fees Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Delinquent_Days_Snapshot__c</fullName>
        <label>DM Loan Delinquent Days Snapshot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Payment_Transaction_Time__c</fullName>
        <label>DM Loan Payment Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Payment_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Loan Payment Transaction</label>
        <referenceTo>DM_Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>DM Investor Loan Transaction</relationshipLabel>
        <relationshipName>DM_Investor_Loan_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Principal_Remaining_Snapshot__c</fullName>
        <label>DM Loan Principal Remaining Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Loan_Status_Snapshot__c</fullName>
        <label>DM Loan Status Snapshot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_New_Certificate_Rate__c</fullName>
        <label>DM New Certificate Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_New_Service_Rate__c</fullName>
        <label>DM New Service Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Old_Certificate_Rate__c</fullName>
        <label>DM Old Certificate Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Old_Service_Rate__c</fullName>
        <label>DM Old Service Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Parent_Txn_Ref__c</fullName>
        <label>DM Parent Txn Ref</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Post_Date__c</fullName>
        <label>DM Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Principal_Amount_Paid_Snapshot__c</fullName>
        <label>DM Principal Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Principal_Service_Charge__c</fullName>
        <label>DM Principal Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Principal__c</fullName>
        <label>DM Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Reason__c</fullName>
        <label>DM Reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Rebate_Amount_On_Payoff__c</fullName>
        <label>DM Rebate Amount On Payoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Rebate_Amount_On_Refinance__c</fullName>
        <label>DM Rebate Amount On Refinance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Rebate_Amount_On_Writeoff__c</fullName>
        <label>DM Rebate Amount On Writeoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Rebate_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Rebate Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Reinvest_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Reinvest Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Reinvest_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Reinvest Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_SS_Rebate_Amount_Paid__c</fullName>
        <label>DM SS Rebate Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Sent_To_ACH_On__c</fullName>
        <label>DM Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Sent_to_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Sent to ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Service_Rate_Snapshot__c</fullName>
        <label>DM Service Rate Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Share_Snapshot__c</fullName>
        <label>DM Share Snapshot</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Snapshot_Enabled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Snapshot Enabled Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Start_Date_Snapshot__c</fullName>
        <label>DM Start Date Snapshot</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Status_Snapshot__c</fullName>
        <label>DM Status Snapshot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>De-Active</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <label>DM Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Tax__c</fullName>
        <label>DM Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Total_Amount_Paid_Snapshot__c</fullName>
        <label>DM Total Amount Paid Snapshot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Total_Service_Charge__c</fullName>
        <label>DM Total Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Amount__c</fullName>
        <label>DM Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Code__c</fullName>
        <label>DM Transaction Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>CERTIFICATE RATE CHANGE</fullName>
                </value>
                <value>
                    <fullName>PAYMENT APPROVAL</fullName>
                </value>
                <value>
                    <fullName>SERVICE RATE CHANGE</fullName>
                </value>
                <value>
                    <fullName>DE-ACTIVE</fullName>
                </value>
                <value>
                    <fullName>PAYMENT RELEASE</fullName>
                </value>
                <value>
                    <fullName>PAYMENT REVERSED</fullName>
                </value>
                <value>
                    <fullName>PRINCIPAL REINVESTED</fullName>
                </value>
                <value>
                    <fullName>INTEREST REINVESTED</fullName>
                </value>
                <value>
                    <fullName>PRINCIPAL &amp; INTEREST REINVESTED</fullName>
                </value>
                <value>
                    <fullName>CHARGE OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Transaction_Date__c</fullName>
        <label>DM Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Transaction_Description__c</fullName>
        <label>DM Transaction Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Txn_Type__c</fullName>
        <label>DM Txn Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rebate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_VAT__c</fullName>
        <label>DM VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Waived</label>
        <type>Checkbox</type>
    </fields>
    <label>DM Investor Loan Transaction</label>
    <nameField>
        <label>DM Investor Loan Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Investor Loan Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>